<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.currencyconversion.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txtTitle"
        android:textColor="#00C10D"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text="@string/txtPrompt" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:entries="@array/txtCurrencyArray" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtHint"
        android:inputType="numberDecimal"
        android:textSize="25sp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAmount"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtViewEnding"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="15dp" >

            <RadioButton
                android:id="@+id/radBtnUSDollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:checked="true"
                android:text="@string/radDollars"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radBtnEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radEuros"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radBtnPesos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radPesos"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radBtnCanDollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radCanDollars"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btnConvert"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#00C10D"
        android:textSize="20sp" />

</RelativeLayout>